--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-<style>
-html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background: black;
-}
-
-#unity-container {
-    width: 100vw !important;
-    height: 100vh !important;
-}
-
-canvas {
-    width: 100vw !important;
-    height: 100vh !important;
-}
-</style>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | Nebula Strike</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
- <body style="margin:0;">
+  <body>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=1280 height=720></canvas>
       <div id="unity-loading-bar">
